samples/_failures_safe/1761181442_7a002e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ff51ac3f.c: In function ‘main’:
./samples/SAFE/__tmp_ff51ac3f.c:164:5: error: expected declaration or statement at end of input
  164 |     }
      |     ^
